Added activity_diagnostic and button on activity_sing_up

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,4 +111,5 @@
     <string name="telephone">Teléfono</string>
     <string name="clinic_history">Historia Clínica</string>
     <string name="family_background">Antecedentes Familiares</string>
+    <string name="diagnostic">Diagnostico :</string>
 </resources>
