--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
     <string name="clinic_history">Historia Clínica</string>
     <string name="family_background">Antecedentes Familiares</string>
     <string name="diagnostic">Diagnostico :</string>
+    <string name="title_text">AppSO</string>
 </resources>
